1. Renamed tests cases method in Oauth2AuthorizationTest. 2. Renamed test case variable name from oauth2Authorization1 to oauth2Authorization. 3. Added a test case method for IDS are not equal in Oauth2AuthorizationTest. 4. Refactored StreamReviewTest.